# mu_feature_mm_supv

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .markdownlint.yaml  .markdownlintignore  Cargo.toml  Makefile.toml  ReadMe.rst  RepoDetails.md  basecore_ext_dep.yaml  mu_plus_ext_dep.yaml  mu_tiano_ext_dep.yaml  pip-requirements.txt  rust-toolchain.toml  rustfmt.toml
.azurepipelines/: MuDevOpsSync.yml  MuDevOpsWrapper.yml  Ubuntu-GCC5.yml  Ubuntu-PatchCheck.yml  Windows-VS.yml
.azurepipelines/templates/: platform-build-run-steps.yml  pr-gate-build-job.yml  pr-gate-steps.yml  spell-check-prereq-steps.yml
.devcontainer/: devcontainer.json
.github/: codecov.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  clangpdb-ci.yml  codeql-analysis.yml  codeql.yml  issue-assignment.yml  label-issues.yml  label-sync.yml  release-draft.yml  stale.yml  triage-issues.yml
.github/workflows/label-issues/: file-paths.yml
.pytool/: CISettings.py
Docs/: MmSupervisorDesign.md  MmSupervisorDeveloperConsiderations.md  MmSupervisor_Feature.md  Overview.md  StandaloneMm.md  TraditionalAndStandaloneMm.md  TraditionalMm.md  standalone_mm_framework.md  traditional_smm_framework.md
MmSupervisorPkg/: MmSupervisorPkg.ci.yaml  MmSupervisorPkg.dec  MmSupervisorPkg.dsc
MmSupervisorPkg/Core/: MmSupervisorCore.c  MmSupervisorCore.h  MmSupervisorCore.inf  MmSupervisorInit.c  MmSupervisorInit.inf  aux_config.spam.cfg
MmSupervisorPkg/Core/Common/: MpService.h  PassDown.h  Request.h  UnblockMemory.c  UserDefinitions.h
MmSupervisorPkg/Core/Dispatcher/: Dependency.c  Dispatcher.c  Dispatcher_core.c  Dispatcher_init.c
MmSupervisorPkg/Core/FwVol/: FwVol.c  FwVol.h  FwVol_core.c  FwVol_init.c
MmSupervisorPkg/Core/Hand/: Handle.c  Locate.c  Notify.c
MmSupervisorPkg/Docs/: MmSupervisor_Feature.md
MmSupervisorPkg/Include/: MmSupvTelemetryData.h  SmmSecurePolicy.h
MmSupervisorPkg/Plugin/: MmSupervisorPostBuildScan.py  MmSupervisorPostBuildScan_plug_in.yaml  PostBuildScanMmStandalone.py  PostBuildScanMmStandalone_plug_in.json  ReadMe.md
MmSupervisorPkg/SupervisorPolicyTools/: MmIsolationPoliciesExample.xml  SupervisorPolicyMaker.py  SupervisorPolicyMaker_plug_in.json  policy_entry.py  policy_entry_test.py
MmSupervisorPkg/Test/: MmSupervisorPkgHostTest.dsc
SeaPkg/: SeaPkg.ci.yaml  SeaPkg.dec  SeaPkg.dsc
SeaPkg/Core/: Cpu.c  CpuDef.h  Stm.h  Stm.inf  Stm.lds  StmPerformance.c
SeaPkg/Include/: SeaAuxiliary.h  SeaResponder.h
SeaPkg/MmiEntrySea/: MmiEntrySea.inf  MmiEntrySea.nasmb
SeaPkg/Tools/GenSeaArtifacts/gen_aux/: Cargo.toml  readme.md
SeaPkg/Tools/GenSeaArtifacts/gen_aux/resources/test/: example.efi  example.toml
SeaPkg/Tools/GenSeaArtifacts/gen_aux/src/: aux_file.rs  auxgen.rs  config.rs  file.rs  lib.rs  main.rs  main2.rs  metadata.rs  report.rs  report2.rs  type_info.rs  util.rs  validation.rs
SeaPkg/Tools/GenSeaArtifacts/gen_manifest/: Cargo.toml
SeaPkg/Tools/GenSeaArtifacts/gen_manifest/src/: main.rs  manifest_v1.rs
SeaPkg/Tools/GenSeaArtifacts/gen_rim/: Cargo.toml
SeaPkg/Tools/GenSeaArtifacts/gen_rim/src/: lib.rs  main.rs
SeaPkg/Tools/GenSeaArtifacts/test_aux/: Cargo.toml  README.md  build.rs
SeaPkg/Tools/GenSeaArtifacts/test_aux/src/: efi.rs  main.rs
SpamPkg/: SpamBinBuild.py  SpamPkg.ci.yaml  SpamPkg.dec  SpamPkg.dsc  SpamPkgBin.dsc
SpamPkg/Core/: Cpu.c  CpuDef.h  Dump.c  EventLog.c  Stm.h  Stm.inf  StmPerformance.c  StmResource.c  VmcsRecord.c
SpamPkg/Include/: Smx.h  SpamResponder.h  Vmx.h
SpamPkg/MmiEntrySpam/: MmiEntrySpam.inf  MmiEntrySpam.nasmb
SpamPkg/Tools/: GenAux.bat
SpamPkg/Tools/GenSpamArtifacts/gen_aux/: Cargo.toml
SpamPkg/Tools/GenSpamArtifacts/gen_aux/src/: main.rs
(+322 files in other folders)
