[package]
name = "GenAux"
version = "0.1.0"
edition = "2021"

[lib]
name = "aux_file"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen_aux"
path = "src/main.rs"

[[bin]]
name = "gen_aux2"
path = "src/main2.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
goblin = "0.8.0"
log = "0.4.27"
pdb = "0.8.0"
scroll = { version = "0.12.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.10"
