[package]
name = "GenAux"
version = "0.1.0"
edition = "2021"

[lib]
name = "auxfile"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create-aux"
path = "src/bin/create_aux.rs"

[[bin]]
name = "create-config"
path = "src/bin/create_config.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
chrono = "0.4"
goblin = "0.10.2"
log = "0.4.27"
pdb = "0.8.0"
scroll = { version = "0.13.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = { version = "5.0.0", default-features = false }
toml = "0.9.8"
regex = "1"
r-efi = "6.0.0"

[dev-dependencies]
tempfile = "3"
