[package]
name = "gen_manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
scroll = { version = "0.13.0", features = ["derive"] }

# Hashing
hex = "0.4.3"
digest = "0.10.7"
sha2 = "0.10.8"
sm3 = "0.4.2"
