[package]
name = "test_aux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-aux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
GenAux = { path = "../gen_aux"}
r-efi = "5.2.0"
scroll = { version = "0.12.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.10"
